[tool.poetry]
name = "research-town"
version = "0.0.1b3"
description = "multi-agent environment for research community simulation"
authors = ["Haofei Yu <haofeiy2@illinois.edu>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pydantic = ">=2.5.0"
pypdf2 = ">=3.0.1"
litellm = ">1.40.0"
beartype = "^0.19.0"
numpy = "<2.0.0"
transformers = "^4.45.1"
termcolor = "^2.4.0"
arxiv = "^2.1.0"
requests = "*"
beautifulsoup4 = "*"
lxml = "*"
tqdm = "*"
keybert = "*"
torch = { version = "^2.2.1", source = "torchcpu" }

uvicorn = { version = "*", optional = true }
fastapi = { version = "*", optional = true }
pandas = { version = "*", optional = true }


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"
types-requests = "*"
types-tqdm = "*"
types-PyYAML = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
mypy = "^1.11.2"

[tool.poetry.extras]
humaneval = ["pandas"]
backend = ["uvicorn", "fastapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data"]

[tool.isort]
profile = "black"
use_parentheses = true
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy-arxiv]
ignore_missing_imports = true

[tool.mypy-transformers]
ignore_missing_imports = true

[tool.mypy-litellm]
ignore_missing_imports = true

[tool.pydoc-markdown]
loaders = [
  { type = "python", search_path = ["."] }
]

[[tool.pydoc-markdown.processors]]
type = "filter"
skip_empty_modules = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "docs"
relative_output_path = ""
sidebar_top_level_label = "Documentation"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
